# mt_primitives

./: CMakeLists.txt  README.md
include/primitives/: Dispatcher.h  FileWorkers.h  ParserWorker.h  ProgramOptions.h  Runner.h  TimeLogger.h  WorkerTypes.h  exceptions.h
src/: Runner.cpp  main.cpp
